--- a/src/Nuuvify.CommonPack.HealthCheck/HealthChecks/dotnet.css
+++ b/src/Nuuvify.CommonPack.HealthCheck/HealthChecks/dotnet.css
@@ -4,7 +4,7 @@
     --secondaryColor: #f4f4f4;  
     --bgMenuActive: #8e47a0;
     --bgButton: #68217a;
-    --logoImageUrl: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e3/.NET_Foundation_Logo.svg/1200px-.NET_Foundation_Logo.svg.png');
+    --logoImageUrl: url(dotnet.png);
     --bgAside: var(--primaryColor);   
 
 }
